Add inventory metadata
